--- a/resources/scss/_client.scss
+++ b/resources/scss/_client.scss
@@ -17,7 +17,7 @@ html {
 }
 
 body.client {
-    background-image: url('./resources/images/client-background.jpg');
+    background-image: url('../images/client-background.jpg');
     background-size: cover;
     background-attachment: fixed;
     background-position: right;
@@ -286,7 +286,7 @@ body.client {
     .buying-scheme__wrapper {
         font-size: 0;
         display: inline-block;
-        background-image: url(../i/screen.png);
+        background-image: url(../images/screen.png);
         background-position: top;
         background-repeat: no-repeat;
         background-size: 100%;
